--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./boat.css" />
-    <title>Boat Animation (Loader)</title>
+    <title>Boat CSS Animation (Loader)</title>
   </head>
   <body>
     <div class="loader">
